--- a/javascript/effect/quizeffect05.html
+++ b/javascript/effect/quizeffect05.html
@@ -586,69 +586,251 @@
             },
             {
                 answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
+                answerNum : "42",
+                answerAsk : "Photoshop CS의 Magic Wand 기능에서 Tolerance 값을 증가시킬 때 얻을 수 있는 효과는?",
                 answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
+                    1: "선택할 색을 여러개 정할 수 있다.",
+                    2: "선택되는 색상의 허용범위가 커진다.",
+                    3: "모든 레이어를 대상으로 선택할 수 있다.",
+                    4: "선택 영역의 경계를 부드럽게 만들어 준다."
                 },
-                answerResult : "",
+                answerResult : "2",
+                answerEx : "톨러런스를 증가시키는 것은 허용치를 높이는 의미가 됩니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "43",
+                answerAsk : "중요한 장면이 들어가는 프레임이란 의미로, 트위닝을 삽입 할 수 있는 것은?",
+                answerChoice : {
+                    1: "플립북",
+                    2: "키프레임",
+                    3: "레이어",
+                    4: "셀"
+                },
+                answerResult : "2",
+                answerEx : "트위닝을 삽입할 수 있는 프레임은 키프레임입니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "44",
+                answerAsk : "웹 인터페이스 디자인에서 강조되는 특성이 아닌 것은?",
+                answerChoice : {
+                    1: "사용자 편의성",
+                    2: "일관성",
+                    3: "독창성",
+                    4: "강제성"
+                },
+                answerResult : "4",
                 answerEx : ""
             },
             {
                 answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
+                answerNum : "45",
+                answerAsk : "Photoshop CS에서 검정색과 흰색의 이미지로 구성되어 있으며, 선택된 영역이 합성되지 않도록 하는 마스크 역할을 하는 것은?",
                 answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
+                    1: "레이어(Layer)",
+                    2: "알파채널(Alpha Channel)",
+                    3: "Z 버퍼(Z-buffer)",
+                    4: "히스토리(History)"
                 },
-                answerResult : "",
+                answerResult : "2",
+                answerEx : "알파채널과 퀵마스크가 있는데 퀵마우스는 적색 계통으로 보이며 영역을 선택할 때 사용합니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "46",
+                answerAsk : "CMYK 모드로 저장된 JPEG 파일을 인터넷 익스플로러 6.0으로 실행하였을때 나타나는 결과로 옳은 것은?",
+                answerChoice : {
+                    1: "이미지의 명도가 낮게 나타난다.",
+                    2: "색상이 반대색으로 나타난다.",
+                    3: "원래 크기보다 크게 보인다.",
+                    4: "이미지를 표시하지 못한다."
+                },
+                answerResult : "4",
+                answerEx : "인터넷 익스플로러 6.0 에서는 인쇄용 색깔인 CMYK를 인식하지 못합니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "47",
+                answerAsk : "움직이는 동영상 파일 형식이 아닌 것은?",
+                answerChoice : {
+                    1: "mpg",
+                    2: "jpg",
+                    3: "swf",
+                    4: "avi"
+                },
+                answerResult : "2",
+                answerEx : "JPG는 정지화상을 표현하는 이미지 파일입니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "48",
+                answerAsk : "해상도(Resolution)에 관한 설명 중 옳은 것은?",
+                answerChoice : {
+                    1: "이미지를 표현하는데 몇 개의 픽셀 또는 도트를 나타내었는지 그 정도를 의미한다.",
+                    2: "작은 화소 단위를 말한다.",
+                    3: "해상도가 높을수록 이미지의 질은 떨어진다.",
+                    4: "해상도는 bps로 나타낸다."
+                },
+                answerResult : "1",
+                answerEx : "픽셀 : 화면을 구성하는 가장 작은 단위"<br>"해상도 : 화면의 선명도를 의미하며, 숫자가 클 수록 이미지의 질은 고해상도가 됨."<br>"DPI : 해상도를 나타내는 단위."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "49",
+                answerAsk : "다음은 무엇에 대한 설명인가?",
+                answerChoice : {
+                    1: "앨리어싱",
+                    2: "디더링",
+                    3: "카스텀 팔레트",
+                    4: "팔레트 플래싱"
+                },
+                answerResult : "2",
+                answerEx : "제한된 색상을 이용하여 다양한 색상을 표현할 수 있는 것은 디더링이라 합니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "50",
+                answerAsk : "웹사이트 제작 과정 중 기획 단계에 설정될 내용이 아닌 것은?",
+                answerChoice : {
+                    1: "전체 사이트 구조",
+                    2: "메인 색상 분위기",
+                    3: "메뉴 구성",
+                    4: "이미지 편집"
+                },
+                answerResult : "4",
                 answerEx : ""
             },
             {
                 answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
+                answerNum : "51",
+                answerAsk : "웹(Web)에서 타이포그래피를 적용 시 고려할 사항으로 틀린 것은?",
                 answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
+                    1: "페이지마다 다양한 서체 사용",
+                    2: "가독성, 판독성을 고려한 서체 사용",
+                    3: "웹 페이지의 여백과 문장의 정렬",
+                    4: "사이트의 내용과 컨셉(Concept)에 어울리는 서체 사용"
                 },
-                answerResult : "",
+                answerResult : "1",
+                answerEx : "페이지마다 다양한 서체를 사용하게 되면 일관성이 없어집니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "52",
+                answerAsk : "다음 설명과 같은 애니메이션 기법은?",
+                answerChoice : {
+                    1: "셀 에니메이션",
+                    2: "그림 에니메이션",
+                    3: "모델 에니메이션",
+                    4: "컴퓨터 에니메이션"
+                },
+                answerResult : "1",
                 answerEx : ""
             },
             {
                 answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
+                answerNum : "53",
+                answerAsk : "컴퓨터 그래픽스(Graphics)의 장점으로 틀린 것은?",
                 answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
+                    1: "인간의 상상력을 기반으로 자유롭게 표현할 수 있다.",
+                    2: "제작물을 수정하는 것이 가능하다.",
+                    3: "미세한 부분은 전혀 표현할 수 없다.",
+                    4: "명암이나 컬러, 질감을 자유롭게 바꿀 수 있다."
                 },
-                answerResult : "",
+                answerResult : "3",
                 answerEx : ""
             },
             {
                 answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
+                answerNum : "54",
+                answerAsk : "다음과 같은 특징을 가지고 있는 파일 포맷의 종류는?",
                 answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
+                    1: "PDF",
+                    2: "DRW",
+                    3: "EPS",
+                    4: "XLS"
                 },
-                answerResult : "",
+                answerResult : "3",
                 answerEx : ""
             },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "55",
+                answerAsk : "웹 사이트를 구축할 때 웹디자이너가 고려할 사항과 거리가 가장 먼 것은?",
+                answerChoice : {
+                    1: "명확하고 일관된 내비게이션을 유지한다.",
+                    2: "가급적이면 플러그인이 필요 없는 페이지를 만든다.",
+                    3: "메뉴별로 사용한 모든 이미지는 유지보수를 위해 같은 폴더에 관리한다.",
+                    4: "안정된 기술을 사용한다."
+                },
+                answerResult : "3",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "56",
+                answerAsk : "평면 이미지를 오려서 화면에서 붙이거나 떼면서 한 장씩 촬영하는 기법은?",
+                answerChoice : {
+                    1: "컷 아웃 에니메이션",
+                    2: "셀 에니메이션",
+                    3: "투광 에니메이션",
+                    4: "스톱모션 에니메이션"
+                },
+                answerResult : "1",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "57",
+                answerAsk : "비트맵 이미지의 픽셀이 사각형이기 때문에 곡선에 들쑥날쑥하고 거칠게 나타나는 계단 현상을 최소화하는 기법은?",
+                answerChoice : {
+                    1: "매핑(Mapping)",
+                    2: "쉐이딩(Shading)",
+                    3: "안티-앨리어싱(Anti-aliasing)",
+                    4: "렌더링(Rendering)"
+                },
+                answerResult : "3",
+                answerEx : "외곽선을 부드럽게 하는 것을 안티앨리어싱이라고 합니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "58",
+                answerAsk : "1950년대 MIT에서 개발되었고 CRT디스플레이 출력 기능을 가지고 있으며 오퍼레이터와 하드카피 생성용 카메라를 위해 사용된 컴퓨터는?",
+                answerChoice : {
+                    1: "ANIAC",
+                    2: "Whirlwind",
+                    3: "MAC",
+                    4: "IBM PC"
+                },
+                answerResult : "2",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "59",
+                answerAsk : "3차원적 이미지를 최종적으로 이미지화 하는 것으로 사실감을 부여하기 위해서 색상과 질감을 입히고 빛과 카메라의 위치를 조작하는 과정은?",
+                answerChoice : {
+                    1: "모델링(Modeling)",
+                    2: "모핑(Morphing)",
+                    3: "렌더링(Rendering)",
+                    4: "시뮬레이션(Simulation)"
+                },
+                answerResult : "3",
+                answerEx : "3차원 이미지에 최종적으로 사실감을 부여하기 위해 색상과 질감을 입히는 것은 렌더링이라고 합니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "60",
+                answerAsk : "벤치마킹에 대한 설명으로 잘못된 것은?",
+                answerChoice : {
+                    1: "원래 경제용어로 자기분야에 최고의 회사를 모델로 삼아 그들의 독특한 비법을 배우는 것을 말한다.",
+                    2: "인터넷 비즈니스에서 사용되는 벤치마킹은 경제사와 시장을 분석하여 비즈니스를 성공적으로 끌고 나갈 수 있는 요소를 찾아내는 것이다.",
+                    3: "경쟁사의 성공 사례를 분석하여 똑같이 적용한다.",
+                    4: "경쟁사가 갖고 있지 않은 독특한 경쟁 요소를 확보한다."
+                },
+                answerResult : "3",
+                answerEx : "모방 : 똑 같이 적용하는 것. 특허 침해가 될 수 있다."
+            }
         ];
 
         // 선택자
