--- a/test02.html
+++ b/test02.html
@@ -1,74 +1,45 @@
-&lt;section id="cardType03" class="card-wrap score section">
-    &lt;h2 class="blind">건축의 세계&lt;/h2>
-    &lt;div class="card_inner container">
-        &lt;article class="card">
-            &lt;figure class="card__header">
-                &lt;img src="img/card_bg03_01.jpg" alt="Architects">
-                &lt;figcaption>Art&lt;/figcaption>
-            &lt;/figure>
-            &lt;div class="card__contents">
-                &lt;h3>
-                    Art is a diverse range of human
-                    activity, interpretation has varied greatly
-                    throughout history
-                &lt;/h3>
-                &lt;p>
-                    There is no generally agreed definition of what
-                    constitutes art, and its interpretation has varied
-                    greatly throughout history and across cultures.
-                    There is no generally agreed definition of what constitutes art
-                &lt;/p>
-            &lt;/div>
-            &lt;div class="card__footer">
-                &lt;h4>건축 박사&lt;em>Hesperioidea&lt;/em>&lt;/h4>
-                &lt;i>&lt;img src="img/card_bg03_icon01.png" alt="Hesperioidea">&lt;/i>
-            &lt;/div>
-        &lt;/article>
-        &lt;article class="card">
-            &lt;figure class="card__header">
-                &lt;img src="img/card_bg03_02.jpg" alt="Architects">
-                &lt;figcaption>Art&lt;/figcaption>
-            &lt;/figure>
-            &lt;div class="card__contents">
-                &lt;h3>
-                    Art is a diverse range of human
-                    activity, interpretation has varied greatly
-                    throughout history
-                &lt;/h3>
-                &lt;p>
-                    There is no generally agreed definition of what
-                    constitutes art, and its interpretation has varied
-                    greatly throughout history and across cultures.
-                    There is no generally agreed definition of what constitutes art
-                &lt;/p>
-            &lt;/div>
-            &lt;div class="card__footer">
-                &lt;h4>건축 박사&lt;em>Hesperioidea&lt;/em>&lt;/h4>
-                &lt;i>&lt;img src="img/card_bg03_icon02.png" alt="Hesperioidea">&lt;/i>
-            &lt;/div>
-        &lt;/article>
-        &lt;article class="card">
-            &lt;figure class="card__header">
-                &lt;img src="img/card_bg03_03.jpg" alt="Architects">
-                &lt;figcaption>Art&lt;/figcaption>
-            &lt;/figure>
-            &lt;div class="card__contents">
-                &lt;h3>
-                    Art is a diverse range of human
-                    activity, interpretation has varied greatly
-                    throughout history
-                &lt;/h3>
-                &lt;p>
-                    There is no generally agreed definition of what
-                    constitutes art, and its interpretation has varied
-                    greatly throughout history and across cultures.
-                    There is no generally agreed definition of what constitutes art
-                &lt;/p>
-            &lt;/div>
-            &lt;div class="card__footer">
-                &lt;h4>건축 박사&lt;em>Hesperioidea&lt;/em>&lt;/h4>
-                &lt;i>&lt;img src="img/card_bg03_icon03.png" alt="Hesperioidea">&lt;/i>
-            &lt;/div>
-        &lt;/article>
-    &lt;/div>
-&lt;/section>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <title>내장 함수</title>
+    <script>
+        // 인코딩. 디코딩함수
+        var encodeStr = '자바스크립트';
+        console.log(encodeURIComponent(encodeStr));
+        var decodeStr = encodeURIComponent(decodeStr);
+        console.log(decodeURIComponent(decodeStr));
+        // 숫자, 유한무한 값 판별 함수
+        var num1 = '숫자';
+        if(!isNaN(num1)) {
+            console.log('숫자');
+        } else {
+            console.log('숫자아님');
+        }
+        var num2 = 1 / 0;
+        if(!isFinite(num2)) {
+            console.log('유한값');
+        } else {
+            console.log('무한값');
+        }
+        // 숫자, 문자 변환 함수
+        var num3 = '10';
+        console.log(Number(num3));
+        var num4 = '100px';
+        console.log(parseInt(num4));
+        var num5 = '33.3%';
+        console.log(parseFloat(num5));
+        var num6 = 10;
+        console.log(typeof num6);
+        onsole.log(typeof String(num6));
+        // 자바스크립트 코드 변경 함수
+        var srt1 = 'var num7 = 10';
+        var srt2 = 'var num8 = 20';
+        eval(str1);
+        eval(str2);
+        console.log(num7 + num8);
+    </script>
+</head>
+<body>  
+</body>
+</html>
