--- a/javascript/effect/quizEffect.html
+++ b/javascript/effect/quizEffect.html
@@ -6,18 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>quizeffect</title>
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <style>
         body {
+            padding: 0;
             width: 100%;
             height: 100vh;
             background: #11E8BB;
             background: linear-gradient(to bottom,  #11E8BB 0%,#8200C9 100%);
             overflow: hidden;
           }
+        #canvas {
+            position: absolute;
+            left: 0;
+            top: 0;
+            z-index: -1;
+        }
     </style>
 </head>
 <body>
+    <main>
+        <div class="intro_menu">
+            <ul>
+                <li>01. 퀴즈 이펙트 : 정답 학인하기<a href="quizEffect01.html">GO</a></li>
+                <li>02. 퀴즈 이펙트 : 주관식 확인하기<a href="quizEffect02.html">GO</a></li>
+                <li>03. 퀴즈 이펙트 : 주관식(여러 문제) 확인하기<a href="quizEffect03.html">GO</a></li>
+                <li>04. 퀴즈 이펙트 : 객관식 확인하기<a href="quizEffect04.html">GO</a></li>
+                <li>05. 퀴즈 이펙트 : 객관식(여러 문제) 확인하기 : 점수<a href="quizEffect05.html">GO</a></li>
+                <li>06. 퀴즈 이펙트 : 객관식(여러 문제) 확인하기 : 슬라이드 형식<a href="quizEffect06.html">GO</a></li>
+            </ul>
+        </div>
+    </main>
     <div id="canvas"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r77/three.min.js"></script>
@@ -49,6 +68,14 @@
             camera.position.z = 400;
             scene.add(camera);
 
+            circle = new THREE.Object3D();
+            skelet = new THREE.Object3D();
+            particle = new THREE.Object3D();
+
+            scene.add(circle);
+            scene.add(skelet);
+            scene.add(particle);
+
             // 지오메트리
             let geometry = new THREE.TetrahedronGeometry(2, 0);
             let geom = new THREE.IcosahedronGeometry(7, 1);
@@ -74,9 +101,33 @@
                 planet.scale.x = planet.scale.y = planet.scale.z = 16;
                 circle.add(planet);
 
-                let planet2 = new THREE.Mesh(geom2, mat2);
+            let planet2 = new THREE.Mesh(geom2, mat2);
                 planet2.scale.x = planet2.scale.y = planet2.scale.z = 10;
                 skelet.add(planet2);
+
+            for(let i=0; i<=1000; i++) {
+                let mesh = new THREE.Mesh(geometry, material);
+                mesh.position.set(Math.random() - 0.5, Math.random() - 0.5, Math.random() - 0.5).normalize();
+                mesh.position.multiplyScalar(90 + (Math.random() * 500));
+                mesh.rotation.set(Math.random() * 2, Math.random() * 2, Math.random() * 2);
+                particle.add(mesh);
+            }
+
+            // 조명
+            let lights = [];
+            lights[0] = new THREE.DirectionalLight(0xffffff, 1)
+            lights[0].position.set(1, 0, 0)
+            lights[1] = new THREE.DirectionalLight(0x11e8bb, 1)
+            lights[1].position.set(0.75 , 1, 0.5)
+            lights[2] = new THREE.DirectionalLight(0x8200c9, 1)
+            lights[2].position.set(-0.75 , -1, 0.5)
+
+            let ambientLight = new THREE.AmbientLight(0x999999, 0.55);
+            scene.add(ambientLight);
+
+            scene.add(lights[0]);
+            scene.add(lights[1]);
+            scene.add(lights[2]);
 
             // 브라우저 움직임 감지
             window.addEventListener("resise", onWindowResize, false)
@@ -92,6 +143,15 @@
         // 애니메이션
         function animate() {
             requestAnimationFrame(animate);
+
+            circle.rotation.x -= 0.002;
+            circle.rotation.y -= 0.002;
+
+            skelet.rotation.x += 0.002;
+            skelet.rotation.y += 0.002;
+
+            particle.rotation.x += 0.002;
+            particle.rotation.y += 0.002;
 
             renderer.render(scene, camera);
         }
