--- a/javascript/javascript03.html
+++ b/javascript/javascript03.html
@@ -594,6 +594,81 @@
                 </div>
             </div>
 
+            <!-- 20 -->
+            <div id="sample12" class="sample">
+                <h3>20. 즉시 실행 함수</h3>
+                <p>
+                </p>
+                <div class="script">
+<pre><code class="language-js">    (function func() {
+        document.write("함수 실행")
+    }());
+
+    (() => {
+        document.write("함수 실행")
+    }) ();
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample12_result">
+                            함수실행
+                        </div>
+                    </details>
+                </div>
+            </div> 
+
+            <!-- 21 -->
+            <div id="sample12" class="sample">
+                <h3>21. 파라미터 함수</h3>
+                <p>
+                </p>
+                <div class="script">
+<pre><code class="language-js">    function func(str) {
+        document.write(str);
+    }
+    func("함수실행");
+
+    function func (str = "함수 실행") {
+        document.write(str);
+    }
+    func();
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample12_result">
+                            함수실행
+                        </div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 22 -->
+            <div id="sample12" class="sample">
+                <h3>22. 아규먼트 함수</h3>
+                <p>
+                </p>
+                <div class="script">
+<pre><code class="language-js">    function func(a,b) {
+        document.write(arguments[0])
+        document.write(arguments[1])
+    }
+    func("함수실행", "함수실행");
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample12_result">
+                            함수실행
+                        </div>
+                    </details>
+                </div>
+            </div>
+
             </div>
         </div>
     </main>
@@ -607,6 +682,33 @@
     <script>hljs.highlightAll();</script>
 
     <script>
+        // 20. 즉시 실행 함수
+        (function func() {
+            document.write("함수 실행")
+        }());
+
+        (() => {
+            document.write("함수 실행")
+        }) ();
+
+        // 21. 파라미터 함수
+        function func(str) {
+            document.write(str);
+        }
+        func("함수실행");
+
+        function func (str = "함수 실행") {
+            document.write(str);
+        }
+        func();
+
+        // // 22. 아규먼트 함수
+        // function func(a,b) {
+        //     document.write(arguments[0])
+        //     document.write(arguments[1])
+        // }
+        // func("함수실행", "함수실행");
+
         // // 선언적 함수
         // function func() {
         //     document.write("함수가 실행되었습니다.1");
@@ -679,165 +781,165 @@
 
         // document.write(func("함수가 실행되었습니다.12"));
 
-        // 13. 함수 유형 : 함수와 매개 변수를 이용한 형태
-        // 함수 : 실행문 집합체, 재활용
-        {
-            function func(num, str1, str2) {
-                document.write(num + ". " + str1 + str2);
-            }
-            func("1", "함수", "실행");
-            func("2", "자바스크립트", "실행");
-            func("3", "제이쿼리", "실행");
-        }
+        // // 13. 함수 유형 : 함수와 매개 변수를 이용한 형태
+        // // 함수 : 실행문 집합체, 재활용
+        // {
+        //     function func(num, str1, str2) {
+        //         document.write(num + ". " + str1 + str2);
+        //     }
+        //     func("1", "함수", "실행");
+        //     func("2", "자바스크립트", "실행");
+        //     func("3", "제이쿼리", "실행");
+        // }
 
-        // 14. 함수 유형 : 함수와 변수를 이용한 형태
-        {
-            function func(num, str1, str2) {
-                document.write(num + ". " + str1 + str2);
-            }
-            const youNum1 = 1;
-            const youNum2 = 2;
-            const youNum3 = 3;
-            const youStr1 = "함수";
-            const youStr2 = "자바스크립트";
-            const youStr3 = "제이쿼리";
-            const youCom1 = "실행";
+        // // 14. 함수 유형 : 함수와 변수를 이용한 형태
+        // {
+        //     function func(num, str1, str2) {
+        //         document.write(num + ". " + str1 + str2);
+        //     }
+        //     const youNum1 = 1;
+        //     const youNum2 = 2;
+        //     const youNum3 = 3;
+        //     const youStr1 = "함수";
+        //     const youStr2 = "자바스크립트";
+        //     const youStr3 = "제이쿼리";
+        //     const youCom1 = "실행";
 
-            func(youNum1, youStr1, youCom1);
-            func(youNum2, youStr2, youCom1);
-            func(youNum3, youStr3, youCom1);
-        }
+        //     func(youNum1, youStr1, youCom1);
+        //     func(youNum2, youStr2, youCom1);
+        //     func(youNum3, youStr3, youCom1);
+        // }
 
-        // 15. 함수 유형 : 함수와 배열 ,객체를 이용한 형태
-        {
-            function func(num, str1, str2) {
-                document.write(num + ". " + str1 + str2);
-            }
-            const info = [
-                {
-                    num : "1",
-                    name : "함수",
-                    com : "실행"
-                },
-                {
-                    num : "2",
-                    name : "함수",
-                    com : "실행"
-                },
-                {
-                    num : "3",
-                    name : "함수",
-                    com : "실행"
-                }
-            ]
+        // // 15. 함수 유형 : 함수와 배열 ,객체를 이용한 형태
+        // {
+        //     function func(num, str1, str2) {
+        //         document.write(num + ". " + str1 + str2);
+        //     }
+        //     const info = [
+        //         {
+        //             num : "1",
+        //             name : "함수",
+        //             com : "실행"
+        //         },
+        //         {
+        //             num : "2",
+        //             name : "함수",
+        //             com : "실행"
+        //         },
+        //         {
+        //             num : "3",
+        //             name : "함수",
+        //             com : "실행"
+        //         }
+        //     ]
 
-            func(info[0].num, info[0].name, info[0].com);
-            func(info[1].num, info[1].name, info[1].com);
-            func(info[2].num, info[2].name, info[2].com);
-        }
+        //     func(info[0].num, info[0].name, info[0].com);
+        //     func(info[1].num, info[1].name, info[1].com);
+        //     func(info[2].num, info[2].name, info[2].com);
+        // }
 
-        // 16. 함수 유형 : 객체 안에 변수와 함수를 이용한 형태
-        {
-            const info = {
-                num1 : 1,
-                name1 : "함수",
-                word1 : "실행",
-                num2 : 2,
-                name2 : "자바스크립트",
-                word2 : "실행",
-                num3 : 3,
-                name3 : "제이쿼리",
-                word3 : "실행",
+        // // 16. 함수 유형 : 객체 안에 변수와 함수를 이용한 형태
+        // {
+        //     const info = {
+        //         num1 : 1,
+        //         name1 : "함수",
+        //         word1 : "실행",
+        //         num2 : 2,
+        //         name2 : "자바스크립트",
+        //         word2 : "실행",
+        //         num3 : 3,
+        //         name3 : "제이쿼리",
+        //         word3 : "실행",
 
-                result1 : function() {
-                    document.write(info.num1 + ". " + info.name1, info.word1);
-                },
-                result2 : function() {
-                    document.write(info.num2 + ". " + info.name2, info.word2);
-                },
-                result3 : function() {
-                    document.write(info.num3 + ". " + info.name3, info.word3);
-                }
-            }
-            info.result1();
-            info.result2();
-            info.result3();
-        }
+        //         result1 : function() {
+        //             document.write(info.num1 + ". " + info.name1, info.word1);
+        //         },
+        //         result2 : function() {
+        //             document.write(info.num2 + ". " + info.name2, info.word2);
+        //         },
+        //         result3 : function() {
+        //             document.write(info.num3 + ". " + info.name3, info.word3);
+        //         }
+        //     }
+        //     info.result1();
+        //     info.result2();
+        //     info.result3();
+        // }
 
-        // 17. 함수 유형 : 객체 생성자 함수 ***
-        {
-            function func(num, name, word) {
-                this.num = num;
-                this.name = name;
-                this.word = word;
+        // // 17. 함수 유형 : 객체 생성자 함수 ***
+        // {
+        //     function func(num, name, word) {
+        //         this.num = num;
+        //         this.name = name;
+        //         this.word = word;
 
-                this.result = function() {
-                    document.write(this.num + ". " + this.name + this.word);
-                }
-            }
-            // 인스턴스 생성
-            const info1 = new func("1", "함수", "실행");
-            const info2 = new func("2", "자바스크립트", "실행");
-            const info3 = new func("3", "제이쿼리", "실행");
+        //         this.result = function() {
+        //             document.write(this.num + ". " + this.name + this.word);
+        //         }
+        //     }
+        //     // 인스턴스 생성
+        //     const info1 = new func("1", "함수", "실행");
+        //     const info2 = new func("2", "자바스크립트", "실행");
+        //     const info3 = new func("3", "제이쿼리", "실행");
 
-            // 실행
-            info1.result();
-            info2.result();
-            info3.result();
-        }
+        //     // 실행
+        //     info1.result();
+        //     info2.result();
+        //     info3.result();
+        // }
 
-        // 18. 함수 유형 : 프로토타입 함수
-        {
-            function func(num, name, word) {
-                this.num = num;
-                this.name = name;
-                this.word = word;
+        // // 18. 함수 유형 : 프로토타입 함수
+        // {
+        //     function func(num, name, word) {
+        //         this.num = num;
+        //         this.name = name;
+        //         this.word = word;
 
-                func.prototype.result = function() {
-                    document.write(this.num + ". " + this.name + this.word);
-                }
-            }
-            // 인스턴스 생성
-            const info1 = new func("1", "함수", "실행");
-            const info2 = new func("2", "자바스크립트", "실행");
-            const info3 = new func("3", "제이쿼리", "실행");
+        //         func.prototype.result = function() {
+        //             document.write(this.num + ". " + this.name + this.word);
+        //         }
+        //     }
+        //     // 인스턴스 생성
+        //     const info1 = new func("1", "함수", "실행");
+        //     const info2 = new func("2", "자바스크립트", "실행");
+        //     const info3 = new func("3", "제이쿼리", "실행");
 
-            // 실행
-            info1.result();
-            info2.result();
-            info3.result();
-        }
+        //     // 실행
+        //     info1.result();
+        //     info2.result();
+        //     info3.result();
+        // }
 
-        // 19. 함수 유형 : 객체 리터럴 함수
-        {
-            function func(num, name, word) {
-                this.num = num;
-                this.name = name;
-                this.word = word;
-            }
+        // // 19. 함수 유형 : 객체 리터럴 함수
+        // {
+        //     function func(num, name, word) {
+        //         this.num = num;
+        //         this.name = name;
+        //         this.word = word;
+        //     }
 
-            func.prototype = {
-                result1 : function() {
-                    document.write(this.num + ". " + this.name + this.word);
-                },
-                result2 : function() {
-                    document.write(this.num + ". " + this.name + this.word);
-                },
-                result3 : function() {
-                    document.write(this.num + ". " + this.name + this.word);
-                }
-            }
+        //     func.prototype = {
+        //         result1 : function() {
+        //             document.write(this.num + ". " + this.name + this.word);
+        //         },
+        //         result2 : function() {
+        //             document.write(this.num + ". " + this.name + this.word);
+        //         },
+        //         result3 : function() {
+        //             document.write(this.num + ". " + this.name + this.word);
+        //         }
+        //     }
 
-            // 인스턴스 생성
-            const info1 = new func("1", "함수", "실행");
-            const info2 = new func("2", "자바스크립트", "실행");
-            const info3 = new func("3", "제이쿼리", "실행");
+        //     // 인스턴스 생성
+        //     const info1 = new func("1", "함수", "실행");
+        //     const info2 = new func("2", "자바스크립트", "실행");
+        //     const info3 = new func("3", "제이쿼리", "실행");
 
-            // 실행
-            info1.result1();
-            info2.result2();
-            info3.result3();
-        }
+        //     // 실행
+        //     info1.result1();
+        //     info2.result2();
+        //     info3.result3();
+        // }
 
         // 20. 클래스 : 함수 집합체
         {
