--- a/site/imageType/imageType02.html
+++ b/site/imageType/imageType02.html
@@ -68,6 +68,7 @@
         .image__desc {
             position: absolute;
             left: 0;
+            bottom: -100px;
             width: 100%;
             padding: 23px 20px;
             text-align: center;
