--- a/study/t_study/Ex/study/imageType03.html
+++ b/study/t_study/Ex/study/imageType03.html
@@ -260,6 +260,11 @@
                 </div>
             </div>
     
+            <h3 class="t_tit2">결과물</h3>
+            <div class="t_iframe" style="min-height: 600px; padding-top: 0;">
+                <iframe src="https://kdb6.github.io/ck/site/imageType/imageType03.html" frameborder="0"></iframe>
+            </div>
+
             <div class="t_link">
                 <a href="https://kdb6.github.io/ck/site/imageType/imageType03.html" target="_blank">원본 사이트 보기</a>
             </div>
